# test-p-insights-p

./: .gitignore  Dockerfile  README.md  catalog-info.yaml  pyproject.toml
.github/workflows/: auto-merge.yml  cd.yml  ci.yml
app/: main.py
deploy/overlays/can/: deployment.yaml  kustomization.yaml  service.yaml
deploy/overlays/usa/: deployment.yaml  kustomization.yaml  service.yaml
